# StockMarketSaaSWebsite

./: .flake8  .gitignore  LICENSE  Makefile  Procfile  README.md  pyproject.toml  requirements.txt  wsgi.py
.circleci/: config.yml
All Csv Data/: AAPL.csv  ADAUSDT.csv  ADBE.csv  ADP.csv  AKBNK.csv  ALGOUSDT.csv  AMAT.csv  AMD.csv  AMGN.csv  AMZN.csv  ARCLK.csv  ASELS.csv  ATOMUSDT.csv  AUDUSD.csv  AVAXUSDT.csv  AVGO.csv  AXSUSDT.csv  BIMAS.csv  BNBUSDT.csv  BTCUSDT.csv  CHTR.csv  CMCSA.csv  COST.csv  CSCO.csv  DOGEUSDT.csv  DOHOL.csv  DOTUSDT.csv  EKGYO.csv  EOSUSDT.csv  EREGL.csv  ETHUSDT.csv  EURAUD.csv  EURCAD.csv  EURGBP.csv  EURUSD.csv  FB.csv  FILUSDT.csv  FROTO.csv  FTMUSDT.csv  FTTUSDT.csv  (+63 more)
src/: Days_Each_Month_DD.py  Days_Each_Month_O.py  Monthly_Data.py  Specific_Day_Of_Month_DD.py  Specific_Day_Of_Month_O.py  bestStocksDaily.py  config.py  database.py  dbinit.py  dbupdate.py  forms.py  mav.py  monthlyBestStocks.py  server.py  user.py  views.py
static/assets/css/: button_click.css  templatemo-xtra-blog.css
static/assets/js/: templatemo-script.js  user-script.js
templates/: about.html  advice.html  adviceToUser.html  contact.html  index.html  login.html  post.html  register.html  welcome.html
tests/: test_placeholder.py
