[tool.poetry]
name = "stock-market"
version = "0.0.1"
description = ""
authors = ["cafozer <alicaferozer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.2"
Flask = "^2.0.2"
Flask-Login = "^0.5.0"
jwt = "^1.3.1"
Flask-HTTPAuth = "^4.5.0"
numpy = "^1.22.0"
Flask-WTF = "^1.0.0"
WTForms = "^3.0.1"
passlib = "^1.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
black = "^21.11b1"
flake8-black = "^0.2.3"
flake8-import-order = "^0.18.1"
zimports = "^0.4.1"
flake8-bugbear = "^21.9.2"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
